<resources>
    <string name="app_name">HD Wallpaper</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="nav_header_title">Amazing Wallpaper in your way</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_latest">Latest</string>
    <string name="menu_category">Category</string>
    <string name="menu_gifs">GIFs</string>
    <string name="menu_heart">My Favorites</string>
    <string name="menu_rate">Rate App</string>
    <string name="menu_viewmore">More App</string>
    <string name="menu_about">About Us</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_privacy">Privacy Police</string>
    <string name="latest">Latest</string>
    <string name="category">Category</string>
    <string name="animals">Animals</string>
    <string name="title">HD Wallpaper</string>
    <string name="contenAbout">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="more">More</string>
    <string name="latestHome">Latest Wallpaper</string>
    <string name="imgDetail">Image Detail</string>
    <string name="getPostOfCate">List Post</string>

    <string name="facebook_app_id">Facebook App ID</string>
</resources>
